[package]
name = "qobuz_identifier"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive", "env"] }
color-eyre = "0.6.2"
itertools = "0.12.1"
once_cell = "1.18.0"
reqwest = { version = "0.11.22", features = ["rustls", "json", "rustls-tls"], default-features = false }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
url = "2.4.1"
